[package]
name = "looks-roar"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ethers = { git = "https://github.com/gakonst/ethers-rs" }
clap = { version = "3.0.0", features = ["derive"] }
reqwest = { version = "*", features = ["gzip"]}
